2010-11-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/objectnametoid.c, score/src/objectnametoidstring.c:
	Remove useless variable pointed out by clang.
	* score/src/threadstackallocate.c: Remove useless variable
	initialization pointed out by clang.

2010-11-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/ratemonreportstatistics.c, rtems/src/ratemonresetall.c:
	Remove unchecked return status pointed out by clang.

2010-11-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/putk.c: Remove useless variable initialization
	pointed out by clang.

2010-11-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/userext.h: Documentation.

2010-11-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/watchdoginsert.c: Removed superfluous cast and use
	appropriate API function.  This special case handling is obsolete
	since 2006 with the introduction of compiler memory barriers in the
	interrupt routines.  Removed obsolete comments.

2010-11-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: Make compile again.
	* sapi/src/io.c, score/src/heap.c: Address dead assignment
	issues found by clang.

2010-11-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: Address casting issue highlighted by clang.
	There was no need for an intermediate cast to a structure pointer.

2010-11-01	Alin Rus <alin.codejunkie@gmail.com>

	* posix/include/rtems/posix/aio_misc.h, posix/src/aio_misc.c: Small
	fixes.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/psignalunblockthread.c: Formatting.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/mutextimedlock.c: Check status local variable not
	lock_status.

2010-10-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c: Do not fall back to BOOTP server address
	in case hostname was not specified.
